Added suport for multi-versions

--- a/.doc/UI/source/_templates/versions.html
+++ b/.doc/UI/source/_templates/versions.html
@@ -1,4 +1,9 @@
 {%- if current_version %}
+<!--
+  ~ @copyright   Copyright (C) 2010-2022 Combodo SARL
+  ~ @license     http://opensource.org/licenses/AGPL-3.0
+  -->
+
 <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
   <span class="rst-current-version" data-toggle="rst-current-version">
     <span class="fa fa-book"> Other Versions</span>
